# PortfolioAgent

./: .env.example  .gitignore  AGENTS.md  README.md  config.py  main.py  pyproject.toml  start.sh
.windsurf/plans/: decouple-chat-name-generation.md
dev/: delete_data.py  test.py
src/ai_server/: __init__.py  config.py  constants.py  session_manager.py
src/ai_server/agents/: __init__.py  about_me.py
src/ai_server/ai/: runner.py
src/ai_server/ai/agents/: agent.py
src/ai_server/ai/prompts/: chat_name.py  summary.py
src/ai_server/ai/providers/: __init__.py  embedding_provider.py  llm_provider.py  openai_provider.py
src/ai_server/ai/tools/: tools.py
src/ai_server/api/: dependencies.py  lifecycle.py  routes.py  startup.py
src/ai_server/api/dto/: chat.py  message.py  session.py
src/ai_server/api/exceptions/: agent_exceptions.py  db_exceptions.py  error.py  openai_exceptions.py  redis_exceptions.py  schema_exceptions.py
src/ai_server/api/middleware/: __init__.py  tracing.py
src/ai_server/api/routes/: __init__.py  chat_routes.py  message_routes.py  (+2 more)
src/ai_server/db/: __init__.py
src/ai_server/persistence/: __init__.py
src/ai_server/redis/: embedding_cache.py  langchain_vectorizer.py  semantic_cache.py  session_manager.py
src/ai_server/schemas/: __init__.py  context.py  custom_message.py  custom_session.py  message.py  redis.py  session.py  state.py  summary.py  turn.py  user.py
src/ai_server/session/: session_client.py
src/ai_server/tools/: __init__.py  portfolio_tools.py
src/ai_server/types/: __init__.py  feedback.py  message.py  state.py
src/ai_server/utils/: general.py  logger.py  singleton.py  task_registry.py  tracing.py
(+25 files in other folders)
