[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-server"
version = "0.1.0"
description = "AI server for portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-otel>=0.10.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    # For local development, install omniagent with: uv pip install -e ../OmniAgent
    # For production, uncomment and specify the published package version:
    # "omniagent>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint>=3.3.8"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_server"]
